--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,11 @@ body {
     overflow: hidden;
 }
 
+@viewport {
+  width: device-width ;
+  zoom: 1.0 ;
+}
+
 .sky-gradient {
     float: left;
     width: 4%;
